Add the admin and the project approval
